# rustqueue

./: .http  ADR-001-architecture-review.md  Cargo.toml
migrations/: 20260621065204_create_jobs_table.sql  20260622112013_add_processing_started_at.sql  20260624092432_add_job_notify_trigger.sql  20260626115356_add_job_retry_notify_trigger.sql
src/: config.rs  db.rs  main.rs
src/executor/: email.rs  mod.rs
src/models/: job.rs
src/routes/: events.rs  jobs.rs  mod.rs
src/worker/: mod.rs
