[package]
name = "rustqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
# async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "uuid",
  "chrono",
  "json",
] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SSE Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
